qwt changes: * new port qwt-devel with version 6.0.0rc3. * no longer need to fix install_name of libraries and plugins. * better way of handling arch type(s). * allow for the use of ccache/distcc.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73109 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/qwt/Portfile
+++ b/dports/graphics/qwt/Portfile
@@ -6,16 +6,16 @@ PortSystem          1.0
 name                qwt
 version             5.1.2
 revision            2
-conflicts           qwt52
+conflicts           qwt52 qwt-devel
 categories          graphics science
-maintainers         michaelld
+maintainers         michaelld openmaintainer
 description         Qt Widgets for Technical Applications, version 5.1
 long_description    \
     The Qwt 5.1 library contains GUI Components and utility classes \
     which are primarily useful for programs with a technical \
     background. Beside a 2D plot widget it provides scales, sliders, \
     dials, compasses, thermometers, wheels and knobs to control \
-    or display values, arrays, or ranges of type double.  \
+    or display values, arrays, or ranges of type double. \
     Version 5.1 contains source incompatible changes versus 5.2. \
     See qwt52 for that port.
 homepage            http://qwt.sourceforge.net
@@ -29,15 +29,40 @@ platforms           darwin
 
 patchfiles          patch-qwtconfig.pri.diff
 
+post-patch {
+    # setup for debug, if selected
+    if {[variant_isset debug]} {
+        reinplace "/CONFIG/s@release@debug_and_release build_all@" \
+            ${worksrcpath}/qwtconfig.pri
+    }
+
+    # set arch type
+    reinplace "s/@ARCHES@/${qt_arch_types}/" \
+        ${worksrcpath}/qwtconfig.pri
+
+    # setup for examples, if selected
+    if {![variant_isset examples]} {
+        reinplace "s@QwtExamples@@" \
+            ${worksrcpath}/qwtconfig.pri
+    }
+}
+
 variant qt3 conflicts qt4 description {Use qt3-mac} {}
 
 variant qt4 conflicts qt3 description {Use qt4-mac} {}
 
-# move setting of 'qt_dir' outside variants, since 'if' statements are
-# processed in-order while variants are processed after everything else.
+# move setting of 'qt_qmake_cmd' outside variants, since 'if'
+# statements are processed in-order while variants are processed after
+# everything else.
+set qt_qmake_cmd ""
 if {[variant_isset qt3]} {
     depends_lib-append  port:qt3-mac
-    set qt_dir          ${prefix}/libexec/qt3-mac
+    set qt_qmake_cmd    ${prefix}/libexec/qt3-mac/bin/qmake
+
+    PortGroup           archcheck 1.0
+    # check arch of libraries on which this port depends
+    archcheck.files-append  lib/libQtCore.dylib
+
 } else {
     # when variant 'qt3' is not set, use qt4 whether by default or via
     # the user's variant choice
@@ -47,27 +72,22 @@ if {[variant_isset qt3]} {
     PortGroup           qt4 1.0
 }
 
-configure.cmd       ${qt_dir}/bin/qmake
+configure.cmd       ${qt_qmake_cmd}
 configure.pre_args  INSTALLBASE="${prefix}"
+
+# qmake does not handle these flags flags
 configure.universal_args-delete --disable-dependency-tracking
-destroot.destdir    INSTALL_ROOT="${destroot}"
+configure.args-delete           --disable-dependency-tracking
 
-post-destroot {
-    # fix install-name of dynamic library & plugin in generic ways
-
-    # (1) fix the install name of the dynamic library
-    set libqwt_file [exec find ${destroot}${prefix}/lib -type f | \
-                         sed -e "s@${destroot}@@g"]
-    system "install_name_tool -id ${libqwt_file} ${destroot}${libqwt_file}"
-
-    # (2) fix the install name of the plugin
-    set plugin_file [exec find ${destroot}${qt_plugins_dir}/designer -type f | \
-                         sed -e "s@${destroot}@@g"]
-    system "install_name_tool -id ${plugin_file} ${destroot}${plugin_file}"
-
-    # (3) fix the plugin dependency on the dynamic library
-    set plugin_qwt [exec otool -L ${destroot}${plugin_file} | \
-                        grep "${version}" | awk "{ print \$1 }"]
-    system "install_name_tool -change ${plugin_qwt} \
-        ${prefix}/lib/${plugin_qwt} ${destroot}${plugin_file}"
+# allow ccache, if specified by the user
+pre-build {
+    if {[tbool configure.ccache]} {
+        build.post_args "CCACHE=ccache"
+    }
 }
+
+universal_variant   yes
+
+variant debug description "Build release and debug versions" {}
+
+variant examples description "Build examples" {}
