--- a/dports/graphics/qwt-devel/Portfile
+++ b/dports/graphics/qwt-devel/Portfile
@@ -1,46 +1,46 @@
 # -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4; truncate-lines: t -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
-# $Id$
+# $Id: $
 
 PortSystem          1.0
 
-name                qwt52
-version             5.2.1
-revision            2
-conflicts           qwt qwt-devel
+name                qwt-devel
+version             6.0.0-rc3
+conflicts           qwt qwt52
 categories          graphics science
 maintainers         michaelld openmaintainer
-description         Qt Widgets for Technical Applications, version 5.2
+description         Qt Widgets for Technical Applications, version 6.0
 long_description    \
-    The Qwt 5.2 library contains GUI Components and utility classes \
+    The Qwt 6.0 library contains GUI Components and utility classes \
     which are primarily useful for programs with a technical \
     background. Beside a 2D plot widget it provides scales, sliders, \
     dials, compasses, thermometers, wheels and knobs to control \
     or display values, arrays, or ranges of type double. \
-    Version 5.2 contains source incompatible changes versus 5.1. \
+    Version 6.0 contains source incompatible changes versus 5.1. \
     See qwt for that port.
 homepage            http://qwt.sourceforge.net
 master_sites        sourceforge:qwt
 distname            qwt-${version}
 use_bzip2           yes
 use_parallel_build  no
-checksums           md5     4a595b8db0ec3856b117836c1d60cb27 \
-                    sha1    89de7a90b7eddad2989470627baa19d59e348df1 \
-                    rmd160  28e07ea12323a5217118a38e1a7d730a8ce50fee
+checksums           md5     00372e5c149ccd2bc7a31791320fd7ea \
+                    sha1    6052dcd0756947685ac7e465f25642c804c6973d \
+                    rmd160  68b9779e6837e09e99783d7a3b3d42740c737c85
 
 platforms           darwin
 
-patchfiles          patch-qwtconfig.pri.diff
+patchfiles          patch-qwtconfig.pri.diff \
+                    patch-qwtbuild.pri.diff
 
 post-patch {
     # setup for debug, if selected
     if {[variant_isset debug]} {
         reinplace "/CONFIG/s@release@debug_and_release build_all@" \
-            ${worksrcpath}/qwtconfig.pri
+            ${worksrcpath}/qwtbuild.pri
     }
 
     # set arch type
     reinplace "s/@ARCHES@/${qt_arch_types}/" \
-        ${worksrcpath}/qwtconfig.pri
+        ${worksrcpath}/qwtbuild.pri
 
     # setup for examples, if selected
     if {![variant_isset examples]} {
@@ -93,3 +93,6 @@ universal_variant   yes
 variant debug description "Build release and debug versions" {}
 
 variant examples description "Build examples" {}
+
+livecheck.url           http://sourceforge.net/api/file/index/project-id/13693/mtime/desc/rss?path=%2Fqwt
+livecheck.regex         \\/qwt\\/(\\d+(\\.\\d+)+)\\/
