use supported_archs i386 ppc instead of setting configure.arch manually
git-svn-id: https://svn.macports.org/repository/macports/trunk@73111 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/Growl/Portfile
+++ b/dports/aqua/Growl/Portfile
@@ -28,6 +28,9 @@ xcode.target		Growl
 destroot.destdir	DSTROOT=${worksrcpath}/build
 xcode.destroot.path	/destroot
 
+# Common/Source/LoginItemAE.c uses Carbon so can't build x86_64
+supported_archs		i386 ppc
+
 post-patch {
 	reinplace "s|REVISION=.*|REVISION=116|g" ${worksrcpath}/generateHgRevision.sh
 }
@@ -43,16 +46,12 @@ post-destroot {
 # every Growl user will want these.  They should probably go into other ports,
 # in any case.
 
+# the 10.4 SDK might not be installed, use the system's default
 platform darwin 10 {
-	# Common/Source/LoginItemAE.c uses Carbon so can't build x86_64
-	if {![variant_isset universal]} {
-		configure.build_arch	i386
-	}
-	
-	# the 10.4 SDK might not be installed, use the system's default
 	patchfiles-append patch-Growl.xcodeproj__project.pbxproj.no-10.4sdk.diff
 }
 
+# disables separate strip
 platform darwin 8 {
 	patchfiles-append patch-Growl.xcodeproj__project.pbxproj.no_separate_strip.diff
 }
