grep: update to 2.7; see #27123
git-svn-id: https://svn.macports.org/repository/macports/trunk@73112 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/grep/Portfile
+++ b/dports/sysutils/grep/Portfile
@@ -2,7 +2,7 @@
 
 PortSystem 1.0
 name            grep
-version         2.6.3
+version         2.7
 platforms       darwin
 categories	sysutils
 maintainers	nomaintainer
@@ -14,9 +14,8 @@ homepage        http://www.gnu.org/software/grep/grep.html
 platforms       darwin
 master_sites    gnu
 
-checksums       md5     3095b57837b312f087c0680559de7f13 \
-                sha1    ebf111c579bf6f252995b3929f9aed3c0a4038a0 \
-                rmd160  44e6b1b6cadf7c529885cf4e18c8dabc73f755e8
+checksums       sha1    8a5a4a14129d8f3f663b17e68e438881f5b95ac3 \
+                rmd160  70ef6a902510a9b63cb2d9958a87ffc28191cc7d
 
 patchfiles      patch-po-Makefile.in.in.diff
 
