--- a/dports/math/pspp-devel/Portfile
+++ b/dports/math/pspp-devel/Portfile
@@ -4,9 +4,10 @@
 PortSystem          1.0
 
 name                pspp-devel
-set buildstamp      20101028040501
-set buildhash       g8dfe93
+set buildstamp      20101104040502
+set buildhash       g0ddc66
 version             0.7.6
+revision            1
 categories          math
 license             GPLv3+
 maintainers         snc
@@ -35,8 +36,8 @@ depends_lib		    port:gsl \
                     port:libglade2 \
                     port:libtool
 
-checksums           sha1    67f59843739d5f13f98f04460215a841e969b412 \
-                    rmd160  30045bf686a7e3c1560c82b5766dcbf0213e2302
+checksums           sha1    a0ac91653fd4424e5c32638aa66741be9b51b71b \
+                    rmd160  d3fc7555adb210f167d38f87418a29c43cdba65b
 
 #configure.optflags  -O0
 #configure.cflags-append -g
