--- a/dports/devel/qscintilla/Portfile
+++ b/dports/devel/qscintilla/Portfile
@@ -41,96 +41,60 @@ checksums           md5     8063f8f933513959432c27c5ffecf56b \
 
 universal_variant   yes
 
+# fix up QMake .pro files for +debug, if selected; also fixed up the
+# library and header paths to include .. and ../Qt4 before others.
+patchfiles-append   patch-add_debug.diff
+
 post-patch {
-    # allow for universal building, if desired,
-    # by fixing up the QMake .pro files.
-    if {[variant_exists universal] && [variant_isset universal]} {
-        # set universal arch types, depending on what the user has specified
-        array set macports_to_qt_build_arch {
-            ppc     ppc
-            i386    x86
-            ppc64   ppc64
-            x86_64  x86_64
-        }
-        set arch_types ""
-        foreach arch ${universal_archs} {
-            lappend arch_types $macports_to_qt_build_arch($arch)
-        }
-        set ARCHES [join ${arch_types} " "]
-        reinplace "s@CONFIG += @CONFIG += ${ARCHES} @" \
-            ${worksrcpath}/Qt4/qscintilla.pro
-        reinplace "s@CONFIG += @CONFIG += ${ARCHES} @" \
-            ${worksrcpath}/designer-Qt4/designer.pro
-    }
+    # allow for universal and non-native building, if desired, by
+    # fixing up the QMake .pro files.
+    reinplace "s/@ARCHES@/${qt_arch_types}/" \
+        ${worksrcpath}/Qt4/qscintilla.pro
+    reinplace "s/@ARCHES@/${qt_arch_types}/" \
+        ${worksrcpath}/designer-Qt4/designer.pro
 
     # fix up 'Platform.h's, to avoid a conflict with the port 'tidy's
     # 'platform.h'.
-    reinplace "/INCLUDEPATH/s@ \\. @ . .. @" \
-        ${worksrcpath}/Qt4/qscintilla.pro
     foreach fixfile [exec grep -lr \"Platform\.h\" ${worksrcpath}] {
         reinplace "s@\"Platform\.h\"@\"include/Platform\.h\"@g" ${fixfile}
     }
-}
 
-configure.cmd       "cd ${worksrcpath}/Qt4; ${qt_qmake_cmd} qscintilla.pro; \
-                     cd ${worksrcpath}/designer-Qt4; ${qt_qmake_cmd} designer.pro; \
-                     echo"
-
-post-configure {
-    # make sure the designer plugin finds the correct Qsci library, by
-    # putting its search path first of all -L paths
+    # fix up .pro files to handle debug and release
+    set build_type "release"
     if {[variant_isset debug]} {
-        reinplace "/LIBS/s@\-L${prefix}/lib@\-L../Qt4@1" \
-            ${worksrcpath}/designer-Qt4/Makefile.Release
-        reinplace "/LIBS/s@\-L${prefix}/lib@\-L../Qt4@1" \
-            ${worksrcpath}/designer-Qt4/Makefile.Debug
-        reinplace "/INCPATH/s@\-I@\-I../Qt4 \-I@1" \
-            ${worksrcpath}/designer-Qt4/Makefile.Release
-        reinplace "/INCPATH/s@\-I@\-I../Qt4 \-I@1" \
-            ${worksrcpath}/designer-Qt4/Makefile.Debug
-    } else {
-        reinplace "/LIBS/s@\-L${prefix}/lib@\-L../Qt4@1" \
-            ${worksrcpath}/designer-Qt4/Makefile
-        reinplace "/INCPATH/s@\-I@\-I../Qt4 \-I@1" \
-            ${worksrcpath}/designer-Qt4/Makefile
+        set build_type "debug_and_release build_all"
     }
+    reinplace "s/@BUILD_TYPE@/${build_type}/" \
+        ${worksrcpath}/designer-Qt4/designer.pro
+    reinplace "s/@BUILD_TYPE@/${build_type}/" \
+        ${worksrcpath}/Qt4/qscintilla.pro
+
+    # drop in a simple QMake file, for easy building
+    copy ${filespath}/Qsci.pro ${worksrcpath}
+
+    # rename QMake .pro files in subdirs to work with top-level file
+    move ${worksrcpath}/Qt4/qscintilla.pro \
+        ${worksrcpath}/Qt4/Qt4.pro
+    move ${worksrcpath}/designer-Qt4/designer.pro \
+        ${worksrcpath}/designer-Qt4/designer-Qt4.pro
 }
 
-build.cmd           "cd ${worksrcpath}/Qt4; make; cd ${worksrcpath}/designer-Qt4; make; echo"
+# QMake does not handle this flag.
+configure.universal_args-delete --disable-dependency-tracking
+configure.args-delete  --disable-dependency-tracking
 
-destroot.cmd        "cd ${worksrcpath}/Qt4; make install; cd ${worksrcpath}/designer-Qt4; make install; echo"
+configure.pre_args
+configure.cmd ${qt_qmake_cmd}
 
-post-build {
-    # Fix import and plugin library names
-    system "install_name_tool -id \
-                ${qt_dir}/lib/libqscintilla2.5.dylib \
-                ${worksrcpath}/Qt4/libqscintilla2.5.dylib" 
-    system "install_name_tool -id \
-                ${qt_plugins_dir}/designer/libqscintillaplugin.dylib \
-                ${worksrcpath}/designer-Qt4/libqscintillaplugin.dylib" 
-    system "install_name_tool -change \
-                libqscintilla2.5.dylib \
-                ${qt_dir}/lib/libqscintilla2.5.dylib \
-                ${worksrcpath}/designer-Qt4/libqscintillaplugin.dylib"
-    if {[variant_isset debug]} {
-        system "install_name_tool -id \
-                ${qt_dir}/lib/libqscintilla2_debug.5.dylib \
-                ${worksrcpath}/Qt4/libqscintilla2_debug.5.dylib" 
-        system "install_name_tool -id \
-                ${qt_plugins_dir}/designer/libqscintillaplugin_debug.dylib \
-                ${worksrcpath}/designer-Qt4/libqscintillaplugin_debug.dylib" 
-        system "install_name_tool -change \
-                libqscintilla2.5.dylib \
-                ${qt_dir}/lib/libqscintilla2_debug.5.dylib \
-                ${worksrcpath}/designer-Qt4/libqscintillaplugin_debug.dylib"
+# allow ccache, if specified by the user
+pre-build {
+    if {[tbool configure.ccache]} {
+        build.post_args "CCACHE=ccache"
     }
 }
 
 variant debug \
-description {Produce both release and debug library and plugin} {
-    # fix up QMake .pro files for +debug, if selected
-    patchfiles-append patch-add_debug.diff
-}
+description {Produce both release and debug library and plugin} {}
 
 livecheck.type      regex
 livecheck.url       ${master_sites}
