liblastfm changes: * rename path file to be .diff. * allow for +universal building. * no longer need to fix library install_names. * fix library install directory. * fix destroot location for subdirs. * swap -l -L ordering (to be -L -l) in qmake build files for demos and tests.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73120 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/liblastfm/Portfile
+++ b/dports/audio/liblastfm/Portfile
@@ -6,9 +6,9 @@ PortGroup           qt4 1.0
 
 name                liblastfm
 version             0.3.0
-revision            4
+revision            5
 categories          audio
-maintainers         nomaintainer
+maintainers         michaelld openmaintainer
 description         A set of libraries allowing use of the Last.fm site services.
 long_description    liblastfm is a collection of libraries to help you \
 integrate Last.fm services into your rich desktop software. It is \
@@ -25,48 +25,34 @@ depends_build-append port:ruby
 
 depends_lib-append  port:libsamplerate port:fftw-3-single
 
-universal_variant no
-
-configure.pre_args  --prefix ${prefix}
-configure.args      --release
-
-post-configure {
-    # create Makefile's, then patch them to remove a flaw made by qmake.
-    # (1) find subdir Makefile names from top-level Makefile, and have
-    # 'make' create each in turn.
-    foreach fixfile [exec grep -e "Makefile\[\^ \]\*:" \
-                         ${worksrcpath}/Makefile | \
-                     sed -e "s@\\(\[^ \]*/Makefile\[^ \]*\\):\[^ \]*@\\1@g"] {
-        system "cd ${worksrcpath} && PATH=${qt_dir}/bin:$env(PATH) \
-                    make ${fixfile}"
-    }
-
-    # (2) find all created Makefile*'s, and reinplace the offending flaw
-    foreach fixfile [exec find ${worksrcpath} -name "Makefile*"] {
-        reinplace "s@\\(-arch \[^ \]*\\) -arch@\\1@" ${fixfile}
-    }
-}
+universal_variant   yes
 
 use_parallel_build  no
 
 # fix build failure on Snow Leopard
-patchfiles          patch-src-core-misc-cpp.patch
+patchfiles          patch-src-core-misc-cpp.diff
 
-# liblastfm libraries are not referencing their proper location.
-# Until we learn how to fix this properly, we fix it manually.
-post-destroot {
-    set fixlibs [exec find ${destroot} -name "*.dylib" -type f | \
-                     sed -e "s@${destroot}@@g" | \
-                     sed -e "s@\\(\\.\[0-9\]*\\.\\)\[^ \]*@\\1dylib@g"]
-    foreach t_fixlib ${fixlibs} {
-        foreach t_lib ${fixlibs} {
-            if {${t_fixlib} == ${t_lib}} {
-                system "install_name_tool -id ${t_lib} ${destroot}${t_fixlib}"
-            } else {
-                set lib_name [exec echo ${t_lib} | \
-                                  sed -e "s@/\[^ \]*/\\(\[^ \]*\\)@\\1@g"]
-                system "install_name_tool -change ${lib_name} ${t_lib} ${destroot}${t_fixlib}"
-            }
-        }
-    }
+post-patch {
+    # fix library install directory
+    reinplace "/target\\.path/s@\\/lib@\\\$\\\$QMAKE_LIBDIR_QT@" \
+        ${worksrcpath}/src/lastfm.pro
+    reinplace "/target\\.path/s@\\/lib@\\\$\\\$QMAKE_LIBDIR_QT@" \
+        ${worksrcpath}/src/fingerprint/fingerprint.pro
+
+    # fix destroot location for subdirs
+    reinplace "/make install/s@#{\\\$install_prefix}@@g" \
+        ${worksrcpath}/admin/Makefile.rb
+
+    # swap -l -L ordering (to be -L -l)
+    reinplace "/LIBS/s@+= \\(-l\[^ \]*\\) \\(-L\[^ \]*\\)@+= \\2 \\1@" \
+        ${worksrcpath}/demos/demos.pro
+    reinplace "/LIBS/s@+= \\(-l\[^ \]*\\) \\(-L\[^ \]*\\)@+= \\2 \\1@" \
+        ${worksrcpath}/tests/tests.pro
 }
+
+# QMake does not handle this flag.
+configure.universal_args-delete --disable-dependency-tracking
+configure.args-delete  --disable-dependency-tracking
+
+configure.pre_args  --prefix ${prefix}
+configure.args      --release
