py26-wxpython: set supported_archs in carbon variant (#19583)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73122 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-wxpython/Portfile
+++ b/dports/python/py26-wxpython/Portfile
@@ -40,6 +40,7 @@ patch.pre_args	   -p1
 use_configure       no
 
 variant carbon conflicts gtk description {use carbon} {
+    supported_archs	i386 ppc
     build.args   "UNICODE=1 WXPORT=mac"
     destroot.args "UNICODE=1 WXPORT=mac"
 }
