kmymoney4: mention already in descriptions the EXPERIMENTAL state of this port
git-svn-id: https://svn.macports.org/repository/macports/trunk@73124 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/kde/kmymoney4/Portfile
+++ b/dports/kde/kmymoney4/Portfile
@@ -8,12 +8,13 @@ PortGroup           kde4    1.1
 
 name                kmymoney4
 version             4.5
+revision            1
 
 categories          kde finance
-maintainers         mk pixilla.com:brad
+maintainers         mk pixilla.com:brad openmaintainer
 
-description         kmymoney version 4
-long_description    KMyMoney is the personal finance manager for KDE.
+description         kmymoney version 4 (THIS IS STILL AN EXPERIMENTAL PORT.)
+long_description    KMyMoney is the personal finance manager for KDE. (THIS IS STILL AN EXPERIMENTAL PORT.)
 platforms           darwin
 
 homepage            http://kmymoney2.sourceforge.net/index-home.html
@@ -34,7 +35,7 @@ depends_lib-append  port:libofx \
                     port:gwenhywfar4 \
                     port:aqbanking5 \
                     port:kdepimlibs4
-# Actually, we don't need this port anymore, since kmymoney v. 4.5 ships with an icns
+# Actually, we don't need this port anymore, since kmymoney 4.5 already gets shipped with an icns
 #                    port:makeicns
 
 pre-fetch {
