llvm: fix install_name of libEnhancedDisassembly.dylib, libLLVM-2.8.dylib and libLTO.dylib; see #27090 (maintainer timeout)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73125 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/llvm/Portfile
+++ b/dports/lang/llvm/Portfile
@@ -4,7 +4,7 @@ PortSystem 1.0
 
 name                    llvm
 version                 2.8
-revision                1
+revision                2
 categories              lang
 platforms               darwin
 license                 UIUC/NCSA
@@ -19,7 +19,7 @@ long_description        The LLVM Core libraries provide a modern source- and \
 
 homepage                http://llvm.org/
 master_sites            ${homepage}releases/${version}/
-dist_subdir             ${name}/${version}_${revision}
+dist_subdir             ${name}/${version}_1
 
 extract.suffix          .tgz
 
@@ -49,7 +49,7 @@ platform darwin {
 }
 
 post-destroot {
-    foreach x {LLVMHello profile_rt BugpointPasses} {
+    foreach x "BugpointPasses EnhancedDisassembly LLVM-${version} LLVMHello LTO profile_rt" {
         system "install_name_tool -id ${prefix}/lib/lib${x}.dylib ${destroot}${prefix}/lib/lib${x}.dylib"
     }
 }
