pure: update to 0.45 pure-devel: update to 0.45 (the source has moved to a Mercurial repository) pure-fastcgi: update to 0.2 pure-ffi: updated to 0.10 pure-gsl: updateto 0.9 pure-gtk: update to 0.8 pure-liblo: update to 0.5
git-svn-id: https://svn.macports.org/repository/macports/trunk@73126 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/pure-liblo/Portfile
+++ b/dports/audio/pure-liblo/Portfile
@@ -4,7 +4,7 @@
 PortSystem                      1.0
 PortGroup                       pure 1.0
 
-pure.setup                      liblo 0.4
+pure.setup                      liblo 0.5
 categories                      audio
 platforms                       darwin
 maintainers                     ryandesign
@@ -17,8 +17,7 @@ long_description                ${name} provides ${description}. OSC is used \
                                 to exchange data between multimedia devices \
                                 and software across the network.
 
-checksums                       md5     5c9e3800bf5d86ba463ad4354649c331 \
-                                sha1    123f4958f259a398f4af614a94ff98e337489730 \
-                                rmd160  dd5ff2e314b66c73e66be3d247615dc3acad785e
+checksums                       sha1    ab750642edd2f6ef81ca0f76466782af78719d1b \
+                                rmd160  22c2e94533cd64c779fa0a637544c2fe48f156f1
 
 depends_lib-append              port:liblo
