--- a/dports/lang/pure-devel/Portfile
+++ b/dports/lang/pure-devel/Portfile
@@ -5,7 +5,7 @@ PortSystem              1.0
 
 name                    pure-devel
 conflicts               pure
-version                 0.44-r3567
+version                 0.45
 categories              lang
 platforms               darwin
 maintainers             ryandesign
@@ -15,10 +15,13 @@ homepage                http://pure-lang.googlecode.com/
 master_sites            ${homepage}files/
 universal_variant       no
 
-fetch.type              svn
-svn.url                 ${homepage}svn/trunk/pure
-svn.revision            [strsed ${version} {g/^.*-r//}]
-worksrcdir              pure
+fetch.type              hg
+hg.url                  ${homepage}hg
+hg.tag                  pure-${version}
+patch.dir               ${worksrcpath}/pure
+configure.dir           ${patch.dir}
+autoreconf.dir          ${configure.dir}
+build.dir               ${configure.dir}
 
 description \
     functional programming language based on term rewriting
@@ -51,8 +54,6 @@ depends_lib \
 depends_run \
     path:bin/w3m:w3m
 
-patchfiles              patch-acinclude.m4.diff
-
 platform macosx {
     depends_run-replace s|path:bin/w3m:w3m|path:bin/openbrowser:openbrowser|
     patchfiles-append   patch-openbrowser.diff
@@ -80,12 +81,17 @@ pre-configure {
         ui_error "${name} ${version} requires llvm be compiled using position-independent code (PIC)"
         return -code error "incompatible llvm installation"
     }
+    
+    # http://groups.google.com/group/pure-lang/msg/109b9577a084bc08
+    if {[file exists ${prefix}/lib/libLLVM-${llvm_installed_version}.dylib]} {
+        configure.ldflags-append -lLLVM-${llvm_installed_version}
+    }
 }
 
 post-destroot {
     set docdir ${destroot}${prefix}/share/doc/${name}
     xinstall -d ${docdir} ${destroot}${prefix}/share/examples
-    xinstall -W ${worksrcpath} -m 644 \
+    xinstall -W ${destroot.dir} -m 644 \
         COPYING \
         COPYING.LESSER \
         ChangeLog \
@@ -93,7 +99,7 @@ post-destroot {
         README \
         TODO \
         ${docdir}
-    copy ${worksrcpath}/examples ${destroot}${prefix}/share/examples/${name}
+    copy ${destroot.dir}/examples ${destroot}${prefix}/share/examples/${name}
 }
 
 test.run                yes
@@ -101,5 +107,5 @@ test.target             check
 
 livecheck.version       [lindex [split ${version} -] 0]
 livecheck.type          regex
-livecheck.url           ${svn.url}/configure.ac
+livecheck.url           ${hg.url}/pure/configure.ac
 livecheck.regex         {pure, ([0-9.]+)}
