--- a/dports/lang/pure/Portfile
+++ b/dports/lang/pure/Portfile
@@ -5,7 +5,7 @@ PortSystem              1.0
 
 name                    pure
 conflicts               pure-devel
-version                 0.44
+version                 0.45
 categories              lang
 platforms               darwin
 maintainers             ryandesign
@@ -31,8 +31,8 @@ long_description \
 
 use_autoreconf          yes
 
-checksums               sha1    dd7199091b254be57704ea0fff730baf8c32ab45 \
-                        rmd160  4c5c9920e5210bc6503885fc45366fe85bedf083
+checksums               sha1    ead4edd54c0a020fce3c7f7fe3f36d2e73e34e99 \
+                        rmd160  157bcec494a13503f50ce3620bf36fb38e9f53e3
 
 depends_build-append \
     path:bin/llvm-config:llvm
@@ -45,8 +45,6 @@ depends_lib \
 
 depends_run \
     path:bin/w3m:w3m
-
-patchfiles              patch-acinclude.m4.diff
 
 platform macosx {
     depends_run-replace s|path:bin/w3m:w3m|path:bin/openbrowser:openbrowser|
@@ -75,12 +73,17 @@ pre-configure {
         ui_error "${name} ${version} requires llvm be compiled using position-independent code (PIC)"
         return -code error "incompatible llvm installation"
     }
+    
+    # http://groups.google.com/group/pure-lang/msg/109b9577a084bc08
+    if {[file exists ${prefix}/lib/libLLVM-${llvm_installed_version}.dylib]} {
+        configure.ldflags-append -lLLVM-${llvm_installed_version}
+    }
 }
 
 post-destroot {
     set docdir ${destroot}${prefix}/share/doc/${name}
     xinstall -d ${docdir} ${destroot}${prefix}/share/examples
-    xinstall -W ${worksrcpath} -m 644 \
+    xinstall -W ${destroot.dir} -m 644 \
         COPYING \
         COPYING.LESSER \
         ChangeLog \
@@ -88,7 +91,7 @@ post-destroot {
         README \
         TODO \
         ${docdir}
-    copy ${worksrcpath}/examples ${destroot}${prefix}/share/examples/${name}
+    copy ${destroot.dir}/examples ${destroot}${prefix}/share/examples/${name}
 }
 
 test.run                yes
