--- a/dports/math/pure-gsl/Portfile
+++ b/dports/math/pure-gsl/Portfile
@@ -4,7 +4,7 @@
 PortSystem                      1.0
 PortGroup                       pure 1.0
 
-pure.setup                      gsl 0.8
+pure.setup                      gsl 0.9
 categories                      math science
 platforms                       darwin
 maintainers                     ryandesign
@@ -19,8 +19,7 @@ long_description                ${name} aims to provide a complete wrapper \
                                 for scientific programming, number crunching \
                                 and signal processing applications.
 
-checksums                       md5     c7b0d72d5236c8d082cd3329f72e0093 \
-                                sha1    5f1027bf52763a0f87bf933c6b1e53c77ad26096 \
-                                rmd160  e8e45b77ef5ef958444f2608e8c577512a4e16c6
+checksums                       sha1    11609dc1bb3a1d68d036c31ed831d59bad7f8cc6 \
+                                rmd160  5d9104586020e30a07c9d6afae13bb8788acca0d
 
 depends_lib-append              port:gsl
