--- a/dports/www/pure-fastcgi/Portfile
+++ b/dports/www/pure-fastcgi/Portfile
@@ -4,7 +4,7 @@
 PortSystem                      1.0
 PortGroup                       pure 1.0
 
-pure.setup                      fastcgi 0.1
+pure.setup                      fastcgi 0.2
 categories                      www
 platforms                       darwin
 maintainers                     ryandesign
@@ -15,10 +15,7 @@ description                     an interface to the FastCGI library in Pure
 long_description                ${name} lets you write FastCGI scripts in \
                                 Pure, to be run by web servers like Apache.
 
-checksums                       md5     84cd453d28a079a36c5592c689347c97 \
-                                sha1    b21c1d70a17b7b7f37ed10aef157151da186b61d \
-                                rmd160  fa97ae1290b23f2b72555f31bf5e4c5d7f5545af
-
-patchfiles                      patch-fastcgi.c.diff
+checksums                       sha1    ce79d46b78f59ff242a1137b41a133f8cd385212 \
+                                rmd160  950c562b6205718eb78dec2a058cf115d7a7e904
 
 depends_lib-append              port:fcgi
