mkvtoolnix: maintainer update to 4.4.0 (#27139) and make it so mmg so it can actually gain focus and be used (#27081)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73128 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/mkvtoolnix/Portfile
+++ b/dports/multimedia/mkvtoolnix/Portfile
@@ -4,7 +4,7 @@
 PortSystem          1.0
 
 name                mkvtoolnix
-version             4.3.0
+version             4.4.0
 categories          multimedia
 maintainers         stack.nl:ruud
 description         Matroska media files manipulation tools.
@@ -15,13 +15,14 @@ homepage            http://www.bunkus.org/videotools/mkvtoolnix/
 platforms           darwin
 master_sites        ${homepage}sources/
 use_bzip2           yes
+patchfiles          mmg-macos-1.diff
 
 # g++-4.2: -E, -S, -save-temps and -M options are not allowed with multiple -arch flags
 universal_variant   no
 
-checksums           md5 6367631773f41e2bb564323f2b1c48a3 \
-                    sha1 70ae0d5769d65b032c15eedc01e914be3245779e \
-                    rmd160 c55a126da2bcf5e36de61113bb64672d5fb44af4
+checksums           md5 1f2ea5997066ebb65444198576e5ec4a \
+                    sha1 c5e6cbc2fb522ba6653124a2eef6b416bafc488a \
+                    rmd160 85370a9ebd75b66b857c30edef1b22d8c0dce880
 
 depends_build       port:ruby
 
