siege: update to 2.70 (see #27096), update homepage, use unversioned docdir, use notes
git-svn-id: https://svn.macports.org/repository/macports/trunk@73136 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/www/siege/Portfile
+++ b/dports/www/siege/Portfile
@@ -3,8 +3,7 @@
 PortSystem       1.0
 
 name             siege
-version          2.67
-revision        1
+version          2.70
 categories       www benchmarks
 maintainers      nomaintainer
 description      http regression testing and benchmarking utility
@@ -14,13 +13,13 @@ long_description \
     of their code under duress, to see how it will stand up to \
     load on the internet. It lets the user hit a web server with \
     a configurable number of concurrent simulated users.
-homepage         http://www.joedog.org/JoeDog/Siege
+homepage         http://www.joedog.org/index/siege-home
 platforms        darwin
 master_sites     ftp://sid.joedog.org/pub/siege/ \
                  ftp://ftp.joedog.org/pub/siege/
-checksums        md5 ea7b07b4323c2ae13a070e85fad18bbe \
-                 sha1 8beb37a0a2dd5253ae2534903d26fe2b7f34f3fb \
-                 rmd160 4a1e65a5d50bc3cf5243bd1912bfc9d3b787fda9
+
+checksums        sha1    ee0a0c3a9e6559cf8cbaf717649f6684b0d9643a \
+                 rmd160  3c3e780ece92ee4b5b98d490347cdf612371536b
 
 depends_lib      port:openssl
 configure.args   --mandir=${prefix}/share/man \
@@ -38,19 +37,18 @@ pre-configure {
         ${worksrcpath}/doc/Makefile.in
 }
 
+set docdir ${prefix}/share/doc/${name}
+
 post-destroot {
     # copy an example siegerc to ${prefix}share/doc so an updater can see
     # possible changes to siegerc:
-    xinstall -d ${destroot}${prefix}/share/doc/siege-${version}
-    xinstall ${worksrcpath}/doc/siegerc \
-        ${destroot}${prefix}/share/doc/siege-${version}/siegerc
+    xinstall -d ${destroot}${docdir}
+    xinstall -m 644 ${worksrcpath}/doc/siegerc ${destroot}${docdir}
 }
 
-post-install {
-    ui_msg "***************************************************************"
-    ui_msg "* To use siege you have to run 'siege.config'. This generates *"
-    ui_msg "* a default configuration file.                               *"
-    ui_msg "* If you are updating have a look at a possible new '.siegrc' *"
-    ui_msg "* file in ${prefix}/share/doc/siege-${version}/siegerc.            *"
-    ui_msg "***************************************************************"
-}
+notes "
+To use siege you have to run 'siege.config'. This generates a default\
+configuration file.
+If you are updating have a look at a possible new '.siegrc' file in\
+${docdir}/siegerc.
+"
