pidgin: maintainer update to 2.7.5 (#27144); do not look for dependencies in /sw (#27108)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73137 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/pidgin/Portfile
+++ b/dports/net/pidgin/Portfile
@@ -4,7 +4,7 @@
 PortSystem          1.0
 
 name                pidgin
-version             2.7.4
+version             2.7.5
 categories          net
 platforms           darwin
 maintainers         otherware.org:nefar
@@ -19,13 +19,16 @@ long_description    Pidgin is an Open Source clone of America OnLine's \
 
 homepage            http://www.pidgin.im/
 master_sites        sourceforge
-checksums           md5     2960d3e78e50d5bbcf4533c09ba467d8 \
-                    sha1    f7d8d0fcecddda636db642e403280e85b76ea5f2 \
-                    rmd160  900cdcffa34bfc43da803abf5427fdde8bb00b4e
+
+checksums           md5     f055cc137cff02a925c3d2ea08ca4978 \
+                    sha1    f8ac5bef7d2bde898d43a5d97c967bc915c22b40 \
+                    rmd160  0e01cfe8e6d2557f0000724d291a66a710d0ea8e
 
 use_bzip2           yes
 
-depends_build       port:libtool \
+use_autoreconf      yes
+
+depends_build-append port:libtool \
                     port:pkgconfig
 
 depends_lib         port:audiofile \
@@ -42,6 +45,8 @@ depends_lib         port:audiofile \
 
 # nss is not universal
 universal_variant   no
+
+patchfiles          patch-configure.ac.diff
 
 configure.args      --disable-avahi \
                     --disable-consoleui \
