pidgin: remove duplicate dependencies, now that "use_autoreconf yes" is in use
git-svn-id: https://svn.macports.org/repository/macports/trunk@73138 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/pidgin/Portfile
+++ b/dports/net/pidgin/Portfile
@@ -28,8 +28,7 @@ use_bzip2           yes
 
 use_autoreconf      yes
 
-depends_build-append port:libtool \
-                    port:pkgconfig
+depends_build-append port:pkgconfig
 
 depends_lib         port:audiofile \
                     port:dbus \
@@ -101,9 +100,7 @@ variant no_x11 {
 variant quartz requires no_x11 {
     configure.args-append   --disable-gestures
 
-    depends_build-append    port:autoconf \
-                            port:automake \
-                            port:intltool
+    depends_build-append    port:intltool
 
     post-patch {
         system "cd ${worksrcpath} && ${filespath}/autogen.sh"
