p5-netpacket: maintainer update to 1.0.1; see #27053
git-svn-id: https://svn.macports.org/repository/macports/trunk@73139 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-netpacket/Portfile
+++ b/dports/perl/p5-netpacket/Portfile
@@ -4,7 +4,7 @@
 PortSystem          1.0
 PortGroup           perl5 1.0
 
-perl5.setup         NetPacket 0.43.0
+perl5.setup         NetPacket 1.0.1
 platforms           darwin
 maintainers         di.uminho.pt:jpo openmaintainer
 
@@ -15,12 +15,10 @@ long_description    NetPacket provides a base class for a cluster of modules \
                     NetPacket descendent module knows how to encode and decode \
                     packets for the network protocol it implements.
 
-distname            ${perl5.module}-v${version}
+checksums           md5     0cc9dbad360096bf002e9673826cf4ef \
+                    sha1    229cc15520920bb5ba146850b9f96f0082b38845 \
+                    rmd160  c5dc479b16c64aec7de7d7db97c2a28a191a7536
 
-checksums           md5 f22cd95c9be271ad0d65985c219450a7 \
-                    sha1 6014d7684fa54d9f3b9c079fa5c3f1bfbd4a99e3 \
-                    rmd160 d190d0b1d30391c7bdf527274a9c4b4f157b2e8a
-
-depends_build       port:p5-module-build
+perl5.use_module_build
 
 supported_archs noarch
